--- a/cache_sim/Makefile
+++ b/cache_sim/Makefile
@@ -2,13 +2,20 @@ CXX=g++
 SRCS=main.cpp
 OBJS := $(SRCS:.cpp=.o)
 TARGET=cache-sim
+ARGS=0 1
 
 all: $(TARGET)
 	$(CXX) -o $(TARGET) $(OBJS)
-$(TARGET): 
+
+$(TARGET): $(OBJS) 
 	$(CXX) -c $(SRCS)
+
+.PHONY=clean
+.PHONY=run
+
+
 clean:
 	rm -f $(OBJS) $(TARGET)
 
 run: $(TARGET)
-	./$(TARGET)
+	./$(TARGET) $(ARGS)
