--- a/cache_sim/Makefile
+++ b/cache_sim/Makefile
@@ -1,4 +1,5 @@
 CXX=g++
+CXXFLAGS=-g -std=c++11 -Wall -pedantic
 SRCS=main.cpp
 OBJS := $(SRCS:.cpp=.o)
 TARGET=cache-sim
@@ -8,7 +9,7 @@ all: $(TARGET)
 	$(CXX) -o $(TARGET) $(OBJS)
 
 $(TARGET): $(OBJS) 
-	$(CXX) -c $(SRCS)
+	$(CXX) -c $(SRCS) $(CXXFLAGS)
 
 .PHONY=clean
 .PHONY=run
